--- a/app.html
+++ b/app.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
     <body>
+        <page>
+            <feature_01_branch>
+                <feature_01>
+                    Feature 01
+                </feature_01>
+            </feature_01_branch>
+
+        </page>
         
     </body>
 
