--- a/app.html
+++ b/app.html
@@ -6,6 +6,9 @@
                 <feature_01>
                     Feature 01
                 </feature_01>
+                <feature_02>
+                    Feature 02
+                </feature_02>
             </feature_01_branch>
 
         </page>
