--- a/app.html
+++ b/app.html
@@ -11,6 +11,15 @@
                 </feature_02>
             </feature_01_branch>
 
+            <feature_02_branch>
+                <feature_01>
+                    Feature 01
+                </feature_01>
+                <feature_02>
+                    Feature 02
+                </feature_02>
+            </feature_02_branch>
+
         </page>
         
     </body>
