feature 1 bug fixed

--- a/app.html
+++ b/app.html
@@ -9,6 +9,9 @@
                 <feature_02>
                     Feature 02
                 </feature_02>
+                <bugfix>
+                    Bug has been fixed
+                </bugfix>
             </feature_01_branch>
 
             <feature_02_branch>
