fixed another bug

--- a/app.html
+++ b/app.html
@@ -12,6 +12,9 @@
                 <bugfix>
                     Bug has been fixed
                 </bugfix>
+                <bugfix>
+                    Bug has been fixed
+                </bugfix>
             </feature_01_branch>
 
             <feature_02_branch>
